--- a/WebContent/resources/style/homePageStyle.css
+++ b/WebContent/resources/style/homePageStyle.css
@@ -11,21 +11,15 @@ body {
 	background-image: url('../img/foto.jpg');
 }
 
-h1, p{
-	text-align: center;
-}
-
 
 .center {
   margin: auto;
   width: 50%;
-  border: 3px solid #6BB4F3;
+  border: 3px solid blue;
   padding: 10px;
   text-align: center;
 }
 
-.centerForm,
-.centerImg,
-.divForm {
+.divForm{
 	text-align: center;
 }
